Added tip to speed up Android Studio